--- a/css/main.css
+++ b/css/main.css
@@ -66,11 +66,11 @@ main{
   align-items: center;
 }
 
-#icon-github {
+#link-github {
   margin-right: 20px;
 }
 
-#icon-linkedin {
+#link-linkedin {
   margin-left: 20px;
 }
 
