--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: montserrat-light;
-    src: url(../fonts/montserrat-light.ttf);
-}
-
-@font-face {
-    font-family: montserrat-thin;
-    src: url(../fonts/montserrat-thin.ttf);
-}
-
 body {
     background-color: #242a35;
 }
@@ -46,10 +36,11 @@ main{
     max-width: 185px;
     display: block;
 }
-
+/*light*/
 #name {
     font-size: 1.75em;
-    font-family: montserrat-light;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
     color: #fff;
     text-align: center;
     margin-top: 16px;
@@ -57,11 +48,12 @@ main{
     margin-right: auto;
     margin-bottom: 0px;
 }
-
+/*thin*/
 #description {
     font-size: 1.25em;
-    font-family: montserrat-thin;
-    color: rgba(255,255,255,0.65);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    color: rgba(255,255,255,0.75);
     text-align: center;
     margin-top: 12px;
     margin-left: auto;
@@ -70,7 +62,8 @@ main{
 }
 
 #about-me {
-  font-family: montserrat-thin;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
   font-size: 1.25em;
   line-height: 1.5;
   color: rgba(255,255,255,0.75);
